[project]
name = "my-first-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.18",
    "langchain-anthropic>=1.4.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "wikipedia>=1.4.0",
]
